gcc/testsuite/rust/rustc/ui/attributes/unsafe/unsafe-safe-attribute_diagnostic_dg.rs
#[unsafe(diagnostic::on_unimplemented( // { dg-error "" "" { target *-*-* } }
    message = "testing",
))]
trait Foo {}

fn main() {}

